2009-04-01  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c: #include <process.h> for building on Windows.

	* gmime/gmime-parser.c: If glib is >= 2.14, use GRegex instead of
	glibc regex.

2009-04-01  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c: Need to #include <unistd.h> for getpid().

	* gmime/gmime-stream-fs.c: Need to #include <unistd.h> here.

	* gmime/gmime-multipart-signed.c: Got rid of an unused variable.

	* gmime/gmime-message.c: Removed unused variables.

	* gmime/gmime-content-type.c: Don't need to #include
	"gmime-table-private.h" here as we don't actually use it.

	* util/gtrie.c: Disable g_warning()'s when compiled w/o
	--enable-warnings and also fixed some compile warnings.

2009-03-31  Jeffrey Stedfast  <fejj@novell.com>

	* gmime.sln: New Microsoft Visual Studio 2008 Solution file for GMime.

	* gmime.vcproj: New Microsoft Visual C++ Project file for GMime.

2009-03-31  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c: Removed unneeded #include <unistd.h>

	* configure.in: Check for unistd.h

	* gmime/gmime-multipart.c (read_random_pool): Implement using
	rand() in the case that unistd.h is not available.

	* gmime/gmime-parser.c (parser_scan_content): Fixed 'crlf'
	argument to be a guint to make it easier to avoid compile warnings
	about comparison between signed/unsigned ints in the callers.

	* gmime/internet-address.c (internet_address_group_add_member):
	Fixed g_return macros to return a value.
	(internet_address_mailbox_get_addr): Same.

2009-03-30  Jeffrey Stedfast  <fejj@novell.com>

	* configure.in: Check for regex.h

	* gmime/gmime-parser.c: #ifdef out the regex functionality if the
	system does not have regex.h

	* gmime/gmime-stream-fs.h: Don't #include <unistd.h> here.

	* gmime/gmime-stream.h: Removed #include <unistd.h> as it isn't
	needed there.

	* gmime/gmime-part.c: Removed unused includes.

	* gmime/gmime-utils.c: Only #include <sys/utsname.h> if we have